--- a/stops/1.md
+++ b/stops/1.md
@@ -2,26 +2,25 @@
 layout: episode
 permalink: /stops/1/
 type: stop
-section_title: Introduction
-title: Welcome to the first stop in the tour
+section_title: Group of Seven at Scott Manor House
+title: Welcome to Part 1: Bedford Views
 page_rank: 1
 stop_id: 1
-audio_file: NASA_main_APU_Shutdown.mp3
+audio_file: Part1-Welcome.mp3
 hero_images:
  - path: 01-introduction-01.jpg
-   alt_text: First example photo for stop 1
+   alt_text: Lismer painting something
  - path: 01-introduction-02.jpg
-   alt_text: Second example photo for stop 1
+   alt_text: Jackson and Lismer having tea by the Sackville River
 ---
 
-Replace this section of text with the full transcript of your audio guide stop. Use a second level heading to flag the person speaking
+Both Arthur Lismer and A.Y. Jackson visited Bedford during the First World War, comissioned as war artists. Rhubarb rhubarb rhubarb ... In the words of Lismer:
 
-## Person speaking (second level heading)
+> Bedford rocks.
+> There is no place I'd rather be!
 
-> And this blockquote is styled to make it clear that this section really is someone speaking.
+Well maybe that's not exactly what he said, but you get the point.
 
-And we can go back to a normal transcript.
+### Acknowledgement
 
-### A third level heading
-
-The example audio used here is borrowed from [NASA](http://www.nasa.gov/connect/sounds/index.html#Discovery) under the terms of their [usage guidelines](http://www.nasa.gov/multimedia/guidelines/index.html). This is just a test clip, so you'll need to replace it!
+Reproductions for this exhibit are graciously provided by [The National Gallery of Canada](https://www.gallery.ca), [The Art Gellery of Nova Scotia](https://www.artgalleryofnovascotia.ca) and [The Sobey Art Foundation](https://sobeyartfoundation.com/en/). Neither the contents of the exhibit nor the media contents of this audio guide can be reused, modified or redistributed in any form without the expressed written consent of the Fort Sackville Foundation and the artworks' right holders.
